fix:  env and autoresize text area

--- a/.env
+++ b/.env
@@ -1,8 +1,17 @@
-REACT_APP_apiKey="AIzaSyDtZ---4UPN231iPjJdwjnfzIoiNDnQKpc"
-REACT_APP_authDomain="bicicletaria-43e74.firebaseapp.com"
-REACT_APP_databaseURL="https://bicicletaria-43e74.firebaseio.com"
-REACT_APP_projectId="bicicletaria-43e74"
-REACT_APP_storageBucket="bicicletaria-43e74.appspot.com"
-REACT_APP_messagingSenderId="292222360354"
-REACT_APP_appId="1:292222360354:web:d175c10cc4d8cea9ad237b"
-REACT_APP_measurementId=G-6CBGML9D8S"
+REACT_APP_apiKey="AIzaSyAU81xx1SPjwAzu5QaCgEwVpCdY3d7dKU0",
+REACT_APP_authDomain="testgeral-795d2.firebaseapp.com",
+REACT_APP_databaseURL="https://testgeral-795d2.firebaseio.com",
+REACT_APP_projectId="testgeral-795d2",
+REACT_APP_storageBucket="testgeral-795d2.appspot.com",
+REACT_APP_messagingSenderId="420279355580",
+REACT_APP_appId="1:420279355580:web:3e3287467eaca161a4e8b9",
+REACT_APP_measurementId="G-SG4RRL6N49"
+
+    
+    
+    
+    
+    
+    
+    
+    
