--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "classnames": "^2.2.6",
+    "clipboard-copy": "^3.2.0",
     "firebase": "^7.21.1",
     "history": "^5.0.0",
     "primeflex": "^2.0.0",
